--- a/portfolio.html
+++ b/portfolio.html
@@ -93,112 +93,130 @@
           <h2 class="visually-hidden">Наши проекты</h2>
           <ul class="ourprj">
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-1.jpg"
-                alt="Ноутбук с отображённым сайтом"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Технокряк</h3>
-                <p class="ourprj-text">Веб-сайт</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-1.jpg"
+                  alt="Ноутбук с отображённым сайтом"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Технокряк</h3>
+                  <p class="ourprj-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-2.jpg"
-                alt="Постер с игроками в баскетбол"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Постер New Orlean vs Golden Star</h3>
-                <p class="ourprj-text">Дизайн</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-2.jpg"
+                  alt="Постер с игроками в баскетбол"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="ourprj-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-3.jpg"
-                alt="Логотип ресторана морской еды"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Ресторан Seafood</h3>
-                <p class="ourprj-text">Приложение</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-3.jpg"
+                  alt="Логотип ресторана морской еды"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Ресторан Seafood</h3>
+                  <p class="ourprj-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-4.jpg"
-                alt="Наушники"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Проект Prime</h3>
-                <p class="ourprj-text">Маркетин</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-4.jpg"
+                  alt="Наушники"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Проект Prime</h3>
+                  <p class="ourprj-text">Маркетин</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-5.jpg"
-                alt="Коробки разных видов"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Проект Boxes</h3>
-                <p class="ourprj-text">Приложение</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-5.jpg"
+                  alt="Коробки разных видов"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Проект Boxes</h3>
+                  <p class="ourprj-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-6.jpg"
-                alt="Сайт проекта Вдохновение не имеет границ"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Inspiration has no Borders</h3>
-                <p class="ourprj-text">Веб-сайт</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-6.jpg"
+                  alt="Сайт проекта Вдохновение не имеет границ"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Inspiration has no Borders</h3>
+                  <p class="ourprj-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-7.jpg"
-                alt="Книга с названием Ограниченое издание"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Издание Limited Edition</h3>
-                <p class="ourprj-text">Дизайн</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-7.jpg"
+                  alt="Книга с названием Ограниченое издание"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Издание Limited Edition</h3>
+                  <p class="ourprj-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-8.jpg"
-                alt="Бирка с названием проекта ЛАБ"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Проект LAB</h3>
-                <p class="ourprj-text">Маркетинг</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-8.jpg"
+                  alt="Бирка с названием проекта ЛАБ"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Проект LAB</h3>
+                  <p class="ourprj-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="ourpjc-list">
-              <img
-                src="./images/portfolio/portfolio-9.jpg"
-                alt="Человек работает за ноутбуком в приложении"
-                width="370"
-                heigth="294"
-              />
-              <div class="name-prj">
-                <h3 class="ourprj-title">Growing Business</h3>
-                <p class="ourprj-text">Приложение</p>
-              </div>
+              <a href="" class="ourpjc-link">
+                <img
+                  src="./images/portfolio/portfolio-9.jpg"
+                  alt="Человек работает за ноутбуком в приложении"
+                  width="370"
+                  heigth="294"
+                />
+                <div class="name-prj">
+                  <h3 class="ourprj-title">Growing Business</h3>
+                  <p class="ourprj-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
